# graphguard

./: .gitignore  CONTRIBUTING.md  Makefile  README.en.md  README.md  README.zh-CN.md  config.py  download_data.sh  pyproject.toml  requirements-cpu.txt  requirements.txt  run_all.py
.github/workflows/: ci.yml
dashboard/: app.py
notebooks/: README.md
reports/: explanation_summary.json  metrics.json  model_comparison.csv
scripts/: build_graph.py  download_data.py  evaluate.py  explain_gnn.py  generate_synthetic_graph.py  train_baseline.py  train_gnn.py
src/graphguard/: __init__.py  build_graph.py  config.py  download_data.py  evaluate.py  explain_gnn.py  generate_synthetic_graph.py  logging_setup.py  train_baseline.py  train_gnn.py  utils.py
tests/: test_explain.py  test_graph.py
