[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphguard"
version = "1.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# Ignored rules (see Makefile/CI history):
#   E501  line too long        — handled by `ruff format`
#   F401  unused import         — re-exports / __init__ convenience imports
#   N803  arg name lowercase    — domain naming (e.g. mixedCase from data schema)
#   N806  var name uppercase    — constants derived from runtime config
#   N812  imported as non-lowercase — `torch.nn.functional as F` (PyTorch convention)
ignore = ["E501", "E402", "F401", "N803", "N806", "N812"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["graphguard"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 15

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
